[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
fitrs = { git = "https://github.com/mclrc/fitrs", rev = "9f88392" }
nalgebra = "0.32.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
kd-tree = { version = "0.6.0", features = ["serde"] }
