[package]
name = "index_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
kdtree = { version = "0.7.0", features = ["serialize"] }
serde = { version = "1.0.198", features = ["serde_derive", "derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
vizier-adql = "0.1.1"
