[package]
name = "object_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
common = { path = "../common" }
dotenvy = { version = "0.15.7", features = ["cli"] }
futures = "0.3.30"
itertools = "0.12.1"
kdtree = { version = "0.7.0", features = ["serialize"] }
serde = { version = "1.0.198", features = ["serde_derive", "derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
