[package]
name = "source_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
imageproc = "0.25.0"
itertools = "0.13.0"
rand = "0.8.5"
common = { path = "../common" }
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
serde = "1.0.204"
features = "0.10.0"
derive = "1.0.0"
